initial functionality of notifications
